<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Itch.io</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_views_label">VIEWS</string>
    <string name="game_purchases_label">PURCHASES</string>
    <string name="game_downloads_label">DOWNLOADS</string>
    <string name="game_published_label">Published</string>
    <string name="game_published_not_value">Not published, yet</string>
    <string name="game_created_at_label">Created At</string>
    <string name="game_platforms_label">Platforms</string>
    <string name="game_type_label">Game Type</string>
    <string name="my_games_activity_title">Itch.io</string>
    <string name="news_activity_title">News</string>
    <string name="game_earnings_label">Earnings</string>
    <string name="button_login">Log in</string>
    <string name="activity_empty_default">Sorry, nothing to see here :(</string>
    <string name="my_games_activity_empty">You have no games!!! ? :(</string>
    <string name="menu_share">Share</string>
    <string name="menu_open_browser">Open in browser</string>
    <string name="news_latest">LATEST NEWS</string>
    <string name="news_read_more">Read More...</string>
    <string name="news_read">READ NEWS</string>
    <string name="news_read_more_collapsed">more</string>
    <string name="news_header_collapsed">News:</string>
    <string name="graph_header">Activity Summary</string>

</resources>