<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemGame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/imageViewGameImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/viewGroupGameInfo"
        android:layout_alignTop="@+id/viewGroupGameInfo"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/viewGroupGameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/game_list_item_vertical_padding"
        android:paddingLeft="@dimen/game_list_item_horizontal_padding"
        android:paddingRight="@dimen/game_list_item_horizontal_padding"
        android:paddingTop="@dimen/game_list_item_vertical_padding" >

        <TextView
            android:id="@+id/textViewGameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginBottom="@dimen/game_title_margin_bottom"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/viewGroupStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewGameTitle"
            android:layout_marginBottom="@dimen/game_section_margin_bottom"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textViewViewsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/game_label_margin_right"
                    android:text="@string/game_views_label"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textViewViewsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewViewsLabel"
                    android:layout_centerHorizontal="true"
                    android:text="@string/game_views_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textViewPurchasesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/game_label_margin_right"
                    android:text="@string/game_purchases_label"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textViewPurchasesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewPurchasesLabel"
                    android:layout_centerHorizontal="true"
                    android:text="@string/game_views_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textViewDownloadsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/game_label_margin_right"
                    android:text="@string/game_downloads_label"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textViewDownloadsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewDownloadsLabel"
                    android:layout_centerHorizontal="true"
                    android:text="@string/game_views_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewPublishedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/viewGroupStats"
            android:layout_marginBottom="@dimen/game_field_margin_bottom"
            android:layout_marginRight="@dimen/game_label_margin_right"
            android:text="@string/game_published_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPublishedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewPublishedLabel"
            android:layout_toRightOf="@+id/textViewPublishedLabel"
            android:text="@string/game_views_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewEarningsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewPublishedLabel"
            android:layout_marginBottom="@dimen/game_section_margin_bottom"
            android:layout_marginRight="@dimen/game_label_margin_right"
            android:text="@string/game_earnings_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEarningsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewEarningsLabel"
            android:layout_toRightOf="@+id/textViewEarningsLabel"
            android:text="@string/game_views_label"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>